<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.StoryActivity">

    <ImageButton
        android:id="@+id/btn_translate"
        android:contentDescription="@string/translate"
        android:layout_marginStart="10dp"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_g_translate_24"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/action_logout"
        app:layout_constraintStart_toEndOf="@+id/btn_translate"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/action_logout"
        android:contentDescription="@string/logout"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_logout_24"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_story"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/action_add"
        android:contentDescription="@string/add_new_story"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:backgroundTint="@color/blue_pastel"
        android:src="@drawable/baseline_add_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView" />

</androidx.constraintlayout.widget.ConstraintLayout>