<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:paddingStart="25dp"
    android:paddingEnd="25dp"
    android:paddingBottom="25dp"
    android:background="@color/blue_pastel"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.RegisterFragment"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_reg_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:startIconDrawable="@drawable/baseline_person_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_register_name"
            android:inputType="textPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_reg_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:startIconDrawable="@drawable/baseline_email_24"
        app:layout_constraintTop_toBottomOf="@+id/layout_reg_name"
        android:layout_marginTop="25dp"
        android:hint="@string/email_address" >

        <com.example.storyappdicoding.customview.EmailEditTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ed_register_email"
            android:inputType="textEmailAddress"
            android:hint="@string/email_address" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_reg_pass"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        app:errorEnabled="true"
        app:startIconDrawable="@drawable/baseline_lock_24"
        app:layout_constraintTop_toBottomOf="@+id/layout_reg_email"
        android:layout_marginTop="25dp"
        android:hint="@string/password" >

        <com.example.storyappdicoding.customview.PasswordEditTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ed_register_password"
            android:inputType="textPassword"
            android:hint="@string/password" />

    </com.google.android.material.textfield.TextInputLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/btn_register"
        app:layout_constraintTop_toBottomOf="@+id/layout_reg_pass" />

    <com.example.storyappdicoding.customview.ButtonView
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/layout_reg_pass"
        android:layout_marginTop="50dp" />

</androidx.constraintlayout.widget.ConstraintLayout>